--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,4 +9,5 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,summarize)
-importFrom(purrr,map)
+importFrom(purrr,map2_dbl)
+importFrom(purrr,pmap_dbl)
